edits to 7 Micro/BOSH files of Dmitriy's PR

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -8,11 +8,11 @@ You can use MicroBOSH to deploy multi-VM BOSH, Cloud Foundry, or other
 distributed software packages on an IaaS.
 
 The IaaS you use determines many details of how you deploy MicroBOSH.
-This topic presents an overview of the procedure used to deploy MicroBOSH on any IaaS.
+This topic provides documentation links on how to deploy MicroBOSH and configure the MicroBOSH deployment manifest for a specific IaaS.
 
 ## <a id="configure-local"></a>Deploying MicroBOSH ##
 
-If you are using AWS, OpenStack, or vSphere, refer to IaaS specific tutorials:
+If you are using AWS, OpenStack, or vSphere, refer to the IaaS-specific tutorials:
 
 * [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
 * [Deploying MicroBOSH to OpenStack](./deploy-microbosh-to-openstack.html)
@@ -21,7 +21,7 @@ If you are using AWS, OpenStack, or vSphere, refer to IaaS specific tutorials:
 ## <a id="create-manifest"></a> Advanced Configuration ##
 
 The MicroBOSH deployment manifest is a YAML file that defines the components and
-properties of the deployment.
+properties of the deployment. Refer to the appropriate documentation on how to configure a manifest for your IaaS:
 
 * [AWS](./create-micro-manifest.html#ex-aws)
 * [OpenStack](./create-micro-manifest.html#ex-openstack)
