--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -22,7 +22,7 @@ freeing operators from concerns about differences between environments.
   * [Basic BOSH Workflow](./workflow.html)
   * [BOSH Design Principles](./design.html)
 
-## <a id="installing"></a> Installing &amp; Configuring MicroBOSH ##
+## <a id="installing"></a> Installing and Configuring MicroBOSH ##
 
 The [BOSH Command Line Interface (CLI)](bosh-cli.html) is the primary operator
 interface to BOSH.
