--- a/sample-manifest.html.md.erb
+++ b/sample-manifest.html.md.erb
@@ -61,7 +61,7 @@ jobs:
   - name: default
   properties:
     sample_with_properties:
-      output_value: 'Custom value'
+      output_value: 'custom value'
 
 - name: sample_errand
   templates:
