--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -67,13 +67,13 @@ If you do not have an AWS account, [create one](http://goo.gl/MaAybK).
 
 To configure your AWS account for MicroBOSH:
 
-* (**Optional**) [Obtain AWS credentials](#credentials)
+* [Obtain AWS credentials](#credentials)
 * [Create a Key Pair](#create-key-pair)
 * [Create a Virtual Private Cloud](#create-vpc)
 * [Create an Elastic IP](#create-eip)
 * [Create and configure Security Groups](#create-security)
 
-### <a id="credentials"></a>(Optional) Obtain AWS Credentials ###
+### <a id="credentials"></a> Obtain AWS Credentials ###
 
 Your AWS credentials consist of an `access_key_id` (ACCESS-KEY-ID) and a `secret_access_key` (SECRET-ACCESS-KEY).
 If you already know your AWS credentials you can skip this step and update 
@@ -136,7 +136,7 @@ and `secret_access_key` in your MicroBOSH deployment manifest with values from t
 
     <%= image_tag("images/micro-aws/save-pem.png") %>
 
-1. Move the `bosh.pem` file into local deployment directory. For example, on UNIX you can do this from the terminal:
+1. Move the `bosh.pem` file into local deployment directory. For example, on UNIX run this command:
 
     <pre class="terminal">
       mv ~/Downloads/bosh.pem ~/my-aws-deployment/bosh.pem
@@ -199,6 +199,7 @@ Click **Yes, Allocate**.
     * **Group Name:** bosh
     * **Description:** BOSH Security Group
     * **VPC:** Select the _microbosh_ VPC that you created in [Create a Virtual Private Cloud](#create-vpc).
+
 
     The **Group Name** is used to define the default security groups in [Step 2: Create the Deployment Manifest](#create-manifest).
 
