--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -100,12 +100,12 @@ update:
 
 * **name** [String, required]: A unique name used to identify and reference the resource pool
 * **network** [String, required]: References a valid network name defined in the Networks block. Newly created resource pool VMs use the described configuration.
-* **size** [Integer, optional]: The number of VMs in the resource pool. If omitted resource pool size will be automatically calculated based on the total number of job instances that belong to this resource pool. If specified size must be at least as big as the total number of job instances using it.
+* **size** [Integer, optional]: The number of VMs in the resource pool. If you omit this value, BOSH calculates the resource pool size based on the total number of job instances that belong to this resource pool. If you specify this value, BOSH requires that the size be at least as large as the total number of job instances using it.
 * **stemcell** [Hash, required]: The stemcell used to create resource pool VMs.
     * **name** [String, required]: The stemcell name
     * **version** [String, required]: The stemcell version
 * **cloud_properties** [Hash, required]: Describes any IaaS-specific properties needed to create compilation VMs. Examples: `instance_type`, `availability_zone`
-* **env** [Hash, optional]: Describes the VM environment and provide a specific VM environment to the CPI `create_stemcell` call. `env` data is available to BOSH Agents as VM settings. Default is `{}` (empty Hash).
+* **env** [Hash, optional]: Describes the VM environment and provides a specific VM environment to the CPI `create_stemcell` call. `env` data is available to BOSH Agents as VM settings. Default is `{}` (empty Hash).
 
 Example:
 <pre class='terminal'>
@@ -224,7 +224,6 @@ jobs:
   properties:
     output\_value: 'I am stdout'
     error\_value: 'I am stderr'
-
 - name: sample\_errand
   templates:
   - {name: sample\_with\_properties, release: sample}
@@ -268,8 +267,9 @@ properties:
 1. If an identically named property exists in the [Properties](#properties) block of the deployment manifest, the value of this property overrides the previous value.
 1. If an identically named property exists in the Properties sub-block of the [Jobs](#jobs) block of the deployment manifest, the value of this property overrides all previous values.
 
-**Note**:
+<p class="note"><strong>Notes</strong>:<ul>
+	<li>If you declare specific properties in a job template spec, BOSH ignores all other properties.</li>
+	<li>If you do not declare any specific properties in a job template spec, BOSH applies all properties from the deployment manifest to the job.</li>
+</ul>
+</p>	
 
-* If a job template spec declares specific properties, BOSH ignores all other properties.
-
-* If a job template spec does not declare any properties, BOSH applies all properties from the deployment manifest to the job.
