fix header typo for vm-anti-affinity.html

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -49,7 +49,7 @@ interface to BOSH.
   * [Sample BOSH Deployment Manifest](./sample-manifest.html)
 * [Using BOSH Job and Errand Logs](./job-logs.html)
 * [Persistent Disks](./persistent-disks.html)
-* [VM Anti-Affinity](./vm-anti-affinity.html)
+* [VM Anti-affinity](./vm-anti-affinity.html)
 * [Deploying Mutli-VM BOSH](./deploy-with-bosh.html)
 
 ## <a id="health-management"></a> Health Management with BOSH ##
