--- a/vm-anti-affinity.html.md.erb
+++ b/vm-anti-affinity.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: VM Anti-Affinity
+title: VM Anti-affinity
 ---
 
 For certain deployment jobs, you might want to distribute the instances across multiple physical resources of the IaaS. Even though an IaaS abstracts away the underlying hardware resources, most have specific APIs 
