Fix bosh create release command.

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -824,7 +824,7 @@ This is a good reason to commit.
 
 Run:
 
-  `bosh release --final`
+  `bosh create release --final`
 
 BOSH prompts you for a release name, and assigns a whole-number version to the release.
 
