change index to match title of file: Deploying Distributed Software with BOSH

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -50,7 +50,7 @@ interface to BOSH.
 * [Using BOSH Job and Errand Logs](./job-logs.html)
 * [Persistent Disks](./persistent-disks.html)
 * [VM Anti-affinity](./vm-anti-affinity.html)
-* [Deploying Mutli-VM BOSH](./deploy-with-bosh.html)
+* [Deploying Distributed Software with BOSH](./deploy-with-bosh.html)
 
 ## <a id="health-management"></a> Health Management with BOSH ##
 
