added Troubleshooting on Ubuntu Trusty

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -18,6 +18,12 @@ Use the following command to consult the BOSH CLI help:
 
 `bosh help --all`
 
+####Troubleshooting bosh_cli Install on Ubuntu Trusty
+
+Install pre-requisites on Ubuntu Trusty before running `gem install` commands:
+
+`sudo apt-get install build-essential ruby ruby-dev libxml2-dev libsqlite3-dev libxslt1-dev libpq-dev libmysqlclient-dev`
+
 ####BOSH CLI Troubleshooting
 
 <table border="1" class="nice" >
