Rewrote nokogiri note

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -25,6 +25,7 @@ Install pre-requisites on Ubuntu Trusty before running `gem install` commands:
 `sudo apt-get install build-essential ruby ruby-dev libxml2-dev libsqlite3-dev libxslt1-dev libpq-dev libmysqlclient-dev`
 
 ####BOSH CLI Troubleshooting
+Use this table to resolve the errors listed on the left with the corresponding command on the right.
 
 <table border="1" class="nice" >
 <tr>
@@ -49,7 +50,7 @@ Install pre-requisites on Ubuntu Trusty before running `gem install` commands:
 </tr>
 <tr>
 <td><code>bosh_cli is good</code></td>
-<td>Note: nokogiri compiling might take a while</td>
+<td>Note: This message indicates nokogiri compiling might take longer than expected.</td>
 </tr>
 <tr>
 <td><code>libsqlite not found</code></td>
